--- a/website.html
+++ b/website.html
@@ -5,8 +5,66 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roshan's Portfolio Website</title>
+    <link rel="stylesheet" type="text/css" href="website.css">
+
+    <link rel="stylesheet"
+    href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Jost:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
 </head>
 <body>
+    <!--------header---->
+    <header>
+        <a href="#" class="logo"><img src="img/logo.png"></a>
+        <div class="bx bx-menu" id="menu-icon"></div>
+
+        <ul class="navlist">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">Service</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+        <a href="#" class="top-btn">Download CV</a>
+    </header>
+
+    <!--------home---->
+    <section class="home" id="home">
+        <div class="home-text">
+            <h3>Hello, I'm</h3>
+            <h1>ROSHAN SHAH</h1>
+            <h5>Computer Science Student <span>From Nepal</span></h5>
+            <p>I'm a Computer Science Student at Herald College, Which is Partnered with University of Wolverhampton. <br> I Enjoy Learning About New Technology.</p>
+            <div class="social">
+                <a href="#"><i class='bx bxl-facebook'></i></a>
+                <a href="#"><i class='bx bxl-twitter' ></i></i></a>
+                <a href="#"><i class='bx bxl-linkedin' ></i></a>
+                <a href="#"><i class='bx bxl-instagram' ></i></a>
+            </div>
+            <a href="#" class="btn">About Me</a>
+        </div>
+
+        <div class="home-img">
+            <img src="img/roshan.png"
+        </div>
+    </section>
+
+    <!--------sub service---->
+    <!--<section class="sub service">
+        <div class="items">
+            <div class="sub-box">
+                <div class="sub-img">
+                    <img src="img/"
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--------Link to java Script---->
+    <script type="text/javascript" src="website.js"></script>
     
 </body>
 </html>
