final image change

--- a/website.html
+++ b/website.html
@@ -55,7 +55,7 @@
     <!--------About---->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="img/aboutroshan.jpg">
+            <img src="img/aboutroshan.png">
         </div>
 
         <div class="about-text">
@@ -76,7 +76,7 @@
 
         <div class="blog-content">
 			<div class="col">
-				<img src="img/blog1.png">
+				<img src="img/blog1.jpg">
 				<div class="layer">
 					<h3>1st Blog</h3>
 					<h5>First Week At Herald College Kathmandu</h5>
@@ -94,7 +94,7 @@
 			</div>
 
             <div class="col">
-				<img src="img/blog3.jpg">
+				<img src="img/blog3.png">
 				<div class="layer">
 					<h3>3rd Blog</h3>
 					<h5>Learning Experience Of  Third Week At Herald College</h5>
