--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li><a href="#skill">Skill</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
-        <a href="https://drive.google.com/file/d/1--MJ7-yhmmniTC8PNmiNhaqnvnUoWaiy/view?usp=drivesdk" class="top-btn">Download CV</a>
+        <a href="NOVARIX Site/index.html" class="top-btn">NOVARIX Site</a>
     </header>
 
     <!--------Home---->
@@ -62,7 +62,7 @@
             <h3>I'm a IT Student</h3>
             <h2>I Can Design Your Website</h2>
             <p>Hello there! I'm Roshan Kumar Sah from Gwarko, Nepal. I'm highly passionate and committed to my studies in computer science, which I'm now pursuing at Herald College Kathmandu. My first semester is over, and I have a solid understanding of web Development. So I can build you a website. Every stage of the design process is enjoyable for me.</p>
-            <a href="#contact" class="btn">Hire Me</a>
+            <a href="https://drive.google.com/file/d/1--MJ7-yhmmniTC8PNmiNhaqnvnUoWaiy/view?usp=sharing" class="btn">Download CV</a>
         </div>
     </section>
 
