2nd website added

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li><a href="#skill">Skill</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
-        <a href="NU/novarix uni.html" class="top-btn">NOVARIX Site</a>
+        <a href="2ndHome.html" class="top-btn">NOVARIX Site</a>
     </header>
 
     <!--------Home---->
